--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "pelican-tipue-search"
 version = "0.0.0"
-description = "Serialize generated HTML to JSON content for use by the Tipue static search jQuery plugin"
+description = "Serialize generated HTML content to a JS variable for use by the Tipue static search jQuery plugin"
 authors = ["Talha Mansoor <talha131@gmail.com>"]
 license = "AGPL-3.0"
 readme = "README.md"
