--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,47 +2,7 @@ name: build
 
 on: [push, pull_request]
 
-env:
-  PYTEST_ADDOPTS: "--color=yes"
-
 jobs:
-  test:
-    name: Test
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: [3.7, 3.8]
-
-    steps:
-      - uses: actions/checkout@v2
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v2
-        with:
-          python-version: ${{ matrix.python-version }}
-      - name: Set up Pip cache
-        uses: actions/cache@v2
-        id: pip-cache
-        with:
-          path: ~/.cache/pip
-          key: pip-${{ hashFiles('**/pyproject.toml') }}
-      - name: Upgrade Pip
-        run: python -m pip install -U pip
-      - name: Install Poetry
-        run: python -m pip install poetry
-      - name: Set up Poetry cache
-        uses: actions/cache@v2
-        id: poetry-cache
-        with:
-          path: ~/.cache/pypoetry/virtualenvs
-          key: poetry-${{ hashFiles('**/poetry.lock') }}
-      - name: Install dependencies
-        run: |
-          poetry run pip install -U pip
-          poetry install
-      - name: Run tests
-        run: poetry run invoke tests
-
-
   lint:
     name: Lint
     runs-on: ubuntu-latest
@@ -73,7 +33,7 @@ jobs:
 
   deploy:
     name: Deploy
-    needs: [test, lint]
+    needs: lint
     runs-on: ubuntu-latest
     if: ${{ github.ref=='refs/heads/main' && github.event_name!='pull_request' }}
 
